# activechat

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
activechat/: __main__.py
activechat/common/: exceptions.py
activechat/content_retrievers/: __init__.py  content_retriever.py  googlenews.py  nikkei.py
activechat/models/: __init__.py  content.py  reply.py
activechat/plugins/: __init__.py  plugin.py  zundamon.py
activechat/repliers/: __init__.py  replier.py  slack.py
activechat/reply_generators/: __init__.py  chatgpt.py  reply_generator.py
tests/: conftest.py  testutils.py
tests/content_retrievers/: test_nikkei.py
tests/data/nikkei/: DGKKZO70028410Y3A400C2MM0000.html  DGXZQOCD031XC0T00C23A4000000.html  DGXZQOFD07DDW0X00C23A4000000.html  DGXZQOGR07E2E0X00C23A4000000.html  DGXZQOUB06DA20W3A400C2000000.html  DGXZQOUB093XL0Z00C23A2000000.html  DGXZQOUB108TF0Q3A310C2000000.html  DGXZQOUD061H60W1A201C2000000.html  DGXZQOUD313ZT0R30C23A3000000.html  DGXZQOUE077SU0X00C23A4000000.html  DGXZQOUE1072E0Q3A210C2000000.html  ranking_2023040809.html
tests/data/slack/: expected_blocks.json  upload_file_response.json
tests/data/zundamon/: speakers.json
tests/plugins/: test_zundamon.py
tests/repliers/: conftest.py  test_slack.py
